k8s/base/apps/oauth2-proxy/middleware-errors-auth.yaml
# oauth-redirect: “I received a 401! Redirecting to login page”
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-errors-auth
spec:
  errors:
    status: ["401"]
    service:
      name: oauth2-proxy
      namespace: _NAMESPACE_
      port: 80                    
    query: "/oauth2/sign_in?rd={url}"  # ✅ {url} not {uri}
