k8s/base/apps/oauth2-proxy/middleware-forward-auth.yaml
# oauth2-auth: “Let me check if you’re authenticated” → OAuth2-Proxy → Returns 401 for unauthenticated users
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-auth
spec:
  forwardAuth:
    address: "http://oauth2-proxy.security.svc.cluster.local:80/oauth2/"
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Groups
      - X-Auth-Request-Preferred-Username
      - Set-Cookie
