k8s/base/apps/oauth2-proxy/middleware-forward-authz.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-forward-authz
spec:
  forwardAuth:
    address: "http://override" # This will be patched by the overlay
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
