k8s/base/apps/oauth2-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
    - host: "dummy-auth.example.com" # This will be patched by the overlay
      http:
        paths:
          - path: /oauth2/
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
